--- a/3.html
+++ b/3.html
@@ -35,43 +35,63 @@
 <body>
 
 	<div class="page">
-		<main>
-			<header>
+		<header class="row">
+			<div class="col">
 				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-				<h1><a href="https://www.tcs.com/banking-financial-services" target="_blank"><abbr>TCS</abbr><i>&nearr;</i></a></h1>
-			</header>
-			<p><abbr>TCS</abbr> is a giant company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult. I would like to say I practiced <abbr>UX</abbr> design there, but in reality I was doing a lot of <abbr>UI</abbr>, interaction, and visual design.</p>
-			<p>It was a great learning experience. I learned how to use design tools to speed up my work. I saw a lot of the sales process. I worked in the financial services division and worked on products for banking, insurance, capital markets, corporate governance, and more.</p>
-			<p>A sample of a few, of the many, different <abbr>UI</abbr>s and products I worked while at <abbr>TCS</abbr>.</p>
-		</main>
-		<section class="gallery">
-			<figure>
-				<img src="img/tcs-7.png" alt="Portfolio" />
-				<figcaption>Mobile online banking.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/tcs-8.png" alt="Portfolio" />
-				<figcaption>Mobile online banking.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/tcs-2.jpg" alt="Portfolio" />
-				<figcaption>Banking everywhere.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/tcs-3.png" alt="Portfolio" />
-				<figcaption>Financial transactions on blockchain.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/tcs-4.png" alt="Portfolio" />
-				<figcaption>Financial transactions on blockchain.</figcaption>
-			</figure>
-		</section>
-		<figure class="hero">
+			</div>
+			<h1 class="col"><a href="https://www.tcs.com/banking-financial-services" target="_blank"><abbr>TCS</abbr><i>&nearr;</i></a></h1>
+		</header>
+		<div class="row">
+			<div class="col">
+				<h5>Projects</h5>
+				<h3>Too many to count</h3>
+			</div>
+			<div class="col">
+				<p><abbr>TCS</abbr> is a giant company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult.</p>
+				<p>I worked in the financial services division and worked on products for banking, insurance, capital markets, corporate governance, and more.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h5>Role</h5>
+				<h3><abbr>UI</abbr> &amp; <abbr>UX</abbr> Designer</h3>
+			</div>
+			<div class="col">
+				<p>I would like to say I practiced <abbr>UX</abbr> design there, but in reality I was doing a lot of <abbr>UI</abbr>, interaction, and visual design.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h3>Process</h3>
+			</div>
+			<div class="col">
+				<p>I learned how to use design tools to speed up my work. I saw a lot of the sales process and how enterprise software is sold.</p>
+				<p>I facilitated a lot of design thinking workshops with clients and guided them through design decisions and our design process.</p>
+				<p>I worked with off-shore product teams and engineering teams and worked on projects that cost millions of dollars and spanned multiple years.</p>
+				<p>A sample of a few, of the many, different <abbr>UI</abbr>s and products I worked while at <abbr>TCS</abbr>.</p>
+			</div>
+		</div>
+		<figure class="screen">
+			<img src="img/tcs-7.png" alt="Portfolio" />
+			<figcaption>Mobile online banking.</figcaption>
+		</figure>
+		<figure>
+			<img src="img/tcs-2.jpg" alt="Portfolio" />
+			<figcaption>Banking everywhere.</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/tcs-3.png" alt="Portfolio" />
+			<figcaption>Financial transactions on blockchain.</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/tcs-4.png" alt="Portfolio" />
+			<figcaption>Financial transactions on blockchain.</figcaption>
+		</figure>
+		<figure class="screen">
 			<img src="img/tcs-1.gif" alt="Portfolio" />
 			<figcaption>Lots of <abbr>UI</abbr> design and design systems.</figcaption>
 		</figure>
 	</div>
-	<a class="totop">&uarr;</a>
 
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
