--- a/5.html
+++ b/5.html
@@ -34,13 +34,38 @@
 <body>
 
 	<div class="page">
-		<main>
-			<header>
+		<header class="row">
+			<div class="col">
 				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-				<h1><a href="https://circleci.com" target="_blank">CircleCI<i>&nearr;</i></a></h1>
-			</header>
-			<p>Coming soon.</p>
-		</main>
+			</div>
+			<h1 class="col"><a href="https://circleci.com" target="_blank">CircleCI<i>&nearr;</i></a></h1>
+		</header>
+		<div class="row">
+			<div class="col">
+				<h2>Project</h2>
+				<h3>The Future of CircleCI</h3>
+			</div>
+			<div class="col">
+				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I worked closely with Software Architects, the Lead <abbr>PM</abbr> and executive stakeholders. As we figured things out, I shared progress and the vision with product, design, and engineering teams.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h2>Role</h2>
+				<h3>Lead Designer</h3>
+			</div>
+			<div class="col">
+				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I worked closely with Software Architects, the Lead <abbr>PM</abbr> and executive stakeholders. As we figured things out, I shared progress and the vision with product, design, and engineering teams.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h2>The problem&hellip; <span class="hilite">the why</span></h2>
+			</div>
+			<div class="col">
+				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I worked closely with Software Architects, the Lead <abbr>PM</abbr> and executive stakeholders. As we figured things out, I shared progress and the vision with product, design, and engineering teams.</p>
+			</div>
+		</div>
 	</div>
 	<a class="totop">&uarr;</a>
 
