--- a/index.html
+++ b/index.html
@@ -32,21 +32,30 @@
 <body>
 
 	<div class="page">
-		<main>
-			<header>
+		<header class="row">
+			<div class="col">
 				<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
-				<h1>I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the world being used by people to make their lives better. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
-			</header>
-			<section class="process">
-				<h2>My Design Process</h2>
+			</div>
+			<h1 class="col">I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the world being used by people to make their lives better. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
+		</header>
+		<!-- <section class="process row">
+			<div class="col">
+				<h5>My Design Process</h5>
+			</div>
+			<div class="col">
 				<p>Talk to and understand your customers. Collaborate with your team. Prototype and test until you are confident in your solutions.</p>
 				<p>There are a lot of design tools, methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more. Which are great when needed.</p>
 				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
-			</section>
-			<section class="works">
-				<h2>Work</h2>
+			</div>
+		</section> -->
+		<section class="works row">
+			<div class="col">
+				<h5>Work</h5>
+				<h3>Recent Use Cases</h3>
+			</div>
+			<div class="col">
 				<div class="work">
-					<h3>CircleCI (work samples coming soon)</h3>
+					<h3><a href="5.html">CircleCI</a></h3>
 					<p>Lead designer on three product experience teams. Helping our design team be the best they can be.</p>
 				</div>
 				<div class="work">
@@ -65,10 +74,13 @@
 					<h3><a href="3.html"><abbr>TCS</abbr></a></h3>
 					<p><abbr>UX</abbr>, <abbr>IX</abbr>, and <abbr>UI</abbr> design for financial products.</p>
 				</div>
-			</section>
-		</main>
-		<footer>
-			<ul>
+			</div>
+		</section>
+		<footer class="row">
+			<div class="col">
+				<h5>Find me on the www</h5>
+			</div>
+			<ul class="col">
 				<li><a href="mailto:nathanphilpot@gmail.com" target="_blank">Email</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
 				<li><a href="https://twitter.com/nathanphilpot" target="_blank">Twitter<i>&nearr;</i></a></li>
