--- a/5.html
+++ b/5.html
@@ -55,19 +55,10 @@
 				<h3>Lead Designer</h3>
 			</div>
 			<div class="col">
-				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I worked closely with Software Architects, the Lead <abbr>PM</abbr> and executive stakeholders. As we figured things out, I shared progress and the vision with product, design, and engineering teams.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h2>The problem&hellip; <span class="hilite">the why</span></h2>
-			</div>
-			<div class="col">
-				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I worked closely with Software Architects, the Lead <abbr>PM</abbr> and executive stakeholders. As we figured things out, I shared progress and the vision with product, design, and engineering teams.</p>
+				<p>More coming soon.</p>
 			</div>
 		</div>
 	</div>
-	<a class="totop">&uarr;</a>
 
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
