--- a/4.html
+++ b/4.html
@@ -59,7 +59,13 @@
 				<h3>Lead Designer</h3>
 			</div>
 			<div class="col">
-				<p>As lead designer I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
+				<ol>
+					<li>Responsible for conducting research (over 50 interviews)</li>
+					<li>Shared reasons behind decisions and design directions with stakeholders and leadership</li>
+					<li>Prototyped and tested designs</li>
+					<li><abbr>UI</abbr> and interaction design</li>
+					<li>Worked closely with engineering in building of the <abbr>UI</abbr></li>
+				</ol>
 			</div>
 		</div>
 		<div class="row">
