--- a/5.html
+++ b/5.html
@@ -46,7 +46,7 @@
 				<h3>The Future of CircleCI</h3>
 			</div>
 			<div class="col">
-				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I worked closely with Software Architects, the Lead <abbr>PM</abbr> and executive stakeholders. As we figured things out, I shared progress and the vision with product, design, and engineering teams.</p>
+				<p>When I started at CircleCI I was put on the team that was tasked with designing the future of CircleCI. I continued working on various projects with this focus.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -55,7 +55,40 @@
 				<h3>Lead Designer</h3>
 			</div>
 			<div class="col">
-				<p>More coming soon.</p>
+				<ol>
+					<li>Worked closely with a cross-functional team of Software Architects, Data Analysts, Lead <abbr>PM</abbr>s and executive stakeholders</li>
+					<li>Lead the development of innovate design solutions and strategies. I worked across teams and product areas to create a holistic user-experience</li>
+					<li>Developed innovate design solutions and strategies</li>
+					<li>Worked across teams and product areas to create a holistic user-experience</li>
+					<li>Provided guidance, direction, and alignment regarding strategy and vision for product teams</li>
+				</ol>
+			</div>
+			<div class="col">
+				<h5>Role</h5>
+				<h3>Design Manager</h3>
+			</div>
+			<div class="col">
+				<ol>
+					<li>Drove large, organizational level design initiatives to further business outcomes</li>
+					<li>Prioritized and delegated work</li>
+					<li>Owned and facilitated meetings to drive progress</li>
+					<li>Contributed to and established design operation practices</li>
+					<li>Mentored and shared expertise with team members</li>
+				</ol>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+			</div>
+			<div class="col">
+				<p>Create the future.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col"><h3>Process</h3></div>
+			<div class="col">
+				<p>Samples and process coming soon.</p>
 			</div>
 		</div>
 	</div>
