--- a/5.html
+++ b/5.html
@@ -82,7 +82,7 @@
 				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
 			</div>
 			<div class="col">
-				<p>Create the future.</p>
+				<p>CircleCI&rsquo;s mission is to manage change so software teams can innovate faster. Up until the very near past, CircleCI was primarily managing one source of change&hellip; the git repo. Specifically a <a href="https://github.com/" target="_blank">Github</a> repo. We wanted to bring in all the sources of change when building software and help engineering teams understand those changes and ultimately help them be more productive and do their best work.</p>
 			</div>
 		</div>
 		<div class="row">
