--- a/5.html
+++ b/5.html
@@ -88,7 +88,7 @@
 		<div class="row">
 			<div class="col"><h3>Process</h3></div>
 			<div class="col">
-				<p>Samples and process coming soon.</p>
+				<p>Process and samples coming soon, but you can see my work today by going to <a href="https://circleci.com" target="_blank">CircleCI<i>&nearr;</i></a> and using the product. You can see my work in the signup experience, project creation, organization creation, people management, inviting experience, and permissions.</p>
 			</div>
 		</div>
 	</div>
