--- a/5.html
+++ b/5.html
@@ -82,15 +82,56 @@
 				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
 			</div>
 			<div class="col">
-				<p>CircleCI&rsquo;s mission is to manage change so software teams can innovate faster. Up until the very near past, CircleCI was primarily managing one source of change&hellip; the git repo. Specifically a <a href="https://github.com/" target="_blank">Github</a> repo. We wanted to bring in all the sources of change when building software and help engineering teams understand those changes and ultimately help them be more productive and do their best work.</p>
+				<p>CircleCI&rsquo;s mission is to manage change so software teams can innovate faster. We wanted to add the ability to add more sources of change, and ultimately reimagine how engineers setup projects and think about a <abbr>CI</abbr> tool. This would help engineering teams understand those changes and ultimately help them be more productive and do their best work.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col"><h3>Process</h3></div>
 			<div class="col">
-				<p>Process and samples coming soon, but you can see my work today by going to <a href="https://circleci.com" target="_blank">CircleCI<i>&nearr;</i></a> and using the product. You can see my work in the signup experience, project creation and settings, organization creation and settings, people management, invite experience, and permissions.</p>
+				<p>I worked on many things at CircleCI, but I will talk about a large initiate here centered around a new sources of change and how we would reimagine project creation and the first-time user experience.</p>
+				<p>A new source of change required some fundamental changes in our product to the architecture and the experience. It required </p>
 			</div>
 		</div>
+		<figure class="screen">
+			<img src="img/cci0.jpg" alt="Portfolio" />
+			<figcaption>Story mapping</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci1.png" alt="Portfolio" />
+			<figcaption>Pipeline setup</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci2.png" alt="Portfolio" />
+			<figcaption>GitLab.com pipeline setup</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci2-b.png" alt="Portfolio" />
+			<figcaption>GitLab Self-Managed pipeline setup</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci3.png" alt="Portfolio" />
+			<figcaption>Pipeline setup confirmation</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci4.png" alt="Portfolio" />
+			<figcaption>1st run</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci5.png" alt="Portfolio" />
+			<figcaption>Runs</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci6.png" alt="Portfolio" />
+			<figcaption>Helpful expert</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci7.png" alt="Portfolio" />
+			<figcaption>Queue</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/cci8.png" alt="Portfolio" />
+			<figcaption>Pipelines</figcaption>
+		</figure>
 	</div>
 
 <script>
