--- a/5.html
+++ b/5.html
@@ -88,8 +88,7 @@
 		<div class="row">
 			<div class="col"><h3>Process</h3></div>
 			<div class="col">
-				<p>I worked on many things at CircleCI, but I will talk about a large initiate here centered around a new sources of change and how we would reimagine project creation and the first-time user experience.</p>
-				<p>A new source of change required some fundamental changes in our product to the architecture and the experience. It required </p>
+				<p>Samples</p>
 			</div>
 		</div>
 		<figure class="screen">
