--- a/5.html
+++ b/5.html
@@ -117,7 +117,7 @@
 		</figure>
 		<figure class="screen">
 			<img src="img/cci5.png" alt="Portfolio" />
-			<figcaption>Runs</figcaption>
+			<figcaption>Pipeline</figcaption>
 		</figure>
 		<figure class="screen">
 			<img src="img/cci6.png" alt="Portfolio" />
