--- a/1.html
+++ b/1.html
@@ -95,9 +95,13 @@
 		<div class="solo-col">
 			<p>The final design, which was a <a href="https://www.microsoft.com/en-us/windows">Windows</a> app built in <a href="https://www.microsoft.com/silverlight/">Silverlight</a>.</p>
 		</div>
-		<figure class="hero">
+		<figure>
 			<img src="img/hrb-5.png" alt="Portfolio" />
 			<figcaption>That is some intense form design!</figcaption>
+		</figure>
+		<figure>
+			<img src="img/hrb-7.png" alt="Portfolio" />
+			<figcaption>Client summary</figcaption>
 		</figure>
 	</div>
 
