--- a/2.html
+++ b/2.html
@@ -76,13 +76,16 @@
 		</div>
 		<figure>
 			<img src="img/wgu-3.jpg" alt="Portfolio" />
-			<figcaption>Sticky notes and whiteboards. Is it even design without them?</a>
-			</figcaption>
+			<figcaption>Sticky notes and whiteboards. Is it even design without them?</figcaption>
 		</figure>
 		<div class="solo-col">
 			<p>One of the funnest parts of this project was talking with student and understanding where and how they learned. In the <abbr>WGU</abbr> office building, there was a testing center on the ground floor. I would hangout down there and as students finished their tests, I asked if they would like to participate in some user research. The ones that had the time, and agreed, I conducted interviews and tested prototypes and information architecture ideas. I also worked with educators and asked how might we bake into the experience ways to help students learn better.</p>
 		</div>
-		<figure class="hero">
+		<figure class="white-jpg">
+			<img src="img/wgu-4.jpg" alt="Portfolio" />
+			<figcaption>Notifications, courses, mentors, and more. All the things students wanted to make progress towards their degree.</figcaption>
+		</figure>
+		<figure>
 			<img src="img/wgu-1.png" alt="Portfolio" />
 			<figcaption>Study time.</figcaption>
 		</figure>
