--- a/4.html
+++ b/4.html
@@ -95,6 +95,10 @@
 			<figcaption>Synthesized research learnings.</figcaption>
 		</figure>
 		<figure>
+			<img src="img/ml-photo-3.jpg" alt="Portfolio" />
+			<figcaption>Story mapping</figcaption>
+		</figure>
+		<figure>
 			<img src="img/ml-photo-1.jpg" alt="Portfolio" />
 			<figcaption>Collaborative design explorations and solutioning exercises with engineering and product stakeholders.</figcaption>
 		</figure>
@@ -123,14 +127,34 @@
 		<div class="solo-col">
 			<p>My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could see the immediate, visible results of their actions.</p>
 		</div>
-		<figure class="hero">
+		<figure>
 			<img src="img/ml-1.gif" alt="Portfolio" />
 			<figcaption>Design exploration. Around the same time we were exploring a new design systems.</figcaption>
 		</figure>
-		<figure class="hero">
+		<figure>
 			<img src="img/ml-5.gif" alt="Portfolio" />
 			<figcaption>Mobile concept</figcaption>
 		</figure>
+		<div class="row">
+			<div class="col">
+				<h3>More</h3>
+			</div>
+			<div class="col">
+				<p>Other projects and explorations. Worked on a project kanban board. Explored new ideas on an <abbr>IC</abbr> experience.</p>
+			</div>
+		</div>
+		<figure class="screen">
+			<img src="img/ml-7.jpg" alt="Portfolio" />
+			<figcaption>Kanban board</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/ml-8.jpg" alt="Portfolio" />
+			<figcaption>Work to do</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/ml-9.jpg" alt="Portfolio" />
+			<figcaption>Time tracking and work to do</figcaption>
+		</figure>		
 	</div>
 
 <script>
