--- a/5.html
+++ b/5.html
@@ -109,27 +109,27 @@
 		</figure>
 		<figure class="screen">
 			<img src="img/cci3.png" alt="Portfolio" />
-			<figcaption>Pipeline setup confirmation</figcaption>
+			<figcaption>Pipeline setup confirmation exploration and direction</figcaption>
 		</figure>
 		<figure class="screen">
 			<img src="img/cci4.png" alt="Portfolio" />
-			<figcaption>1st run</figcaption>
+			<figcaption>1st run exploration and direction</figcaption>
 		</figure>
 		<figure class="screen">
 			<img src="img/cci5.png" alt="Portfolio" />
-			<figcaption>Pipeline</figcaption>
+			<figcaption>Pipeline exploration and direction</figcaption>
 		</figure>
 		<figure class="screen">
 			<img src="img/cci6.png" alt="Portfolio" />
-			<figcaption>Helpful expert</figcaption>
+			<figcaption>Helpful expert exploration and direction</figcaption>
 		</figure>
 		<figure class="screen">
 			<img src="img/cci7.png" alt="Portfolio" />
-			<figcaption>Queue</figcaption>
+			<figcaption>Queue exploration and direction</figcaption>
 		</figure>
 		<figure class="screen">
 			<img src="img/cci8.png" alt="Portfolio" />
-			<figcaption>Pipelines</figcaption>
+			<figcaption>Pipelines exploration and direction</figcaption>
 		</figure>
 	</div>
 
