--- a/1.html
+++ b/1.html
@@ -95,14 +95,18 @@
 		<div class="solo-col">
 			<p>The final design, which was a <a href="https://www.microsoft.com/en-us/windows">Windows</a> app built in <a href="https://www.microsoft.com/silverlight/">Silverlight</a>.</p>
 		</div>
-		<figure>
+		<figure class="screen">
 			<img src="img/hrb-5.png" alt="Portfolio" />
 			<figcaption>That is some intense form design!</figcaption>
 		</figure>
-		<figure>
+		<figure class="hrb-color">
 			<img src="img/hrb-7.png" alt="Portfolio" />
 			<figcaption>Client summary</figcaption>
 		</figure>
+		<nav>
+			<div class="prev"><a class="next" href="4.html">&larr; Mavenlink</a> <code>:Use Case</code></div>
+			<div class="next"><code> Use Case:</code> <a class="next" href="2.html"><abbr>WGU</abbr> &rarr;</a></div>
+		</nav>
 	</div>
 
 <script>
