--- a/2.html
+++ b/2.html
@@ -96,6 +96,10 @@
 		<div class="solo-col">
 			<p>By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
 		</div>
+		<nav>
+			<div class="prev"><a class="next" href="1.html">&larr; <abbr>H&amp;R</abbr> Block</a> <code>:Use Case</code></div>
+			<div class="next"><code> Use Case:</code> <a class="next" href="3.html"><abbr>TCS</abbr> &rarr;</a></div>
+		</nav>
 	</div>
 
 <script>
