--- a/3.html
+++ b/3.html
@@ -91,6 +91,10 @@
 			<img src="img/tcs-1.gif" alt="Portfolio" />
 			<figcaption>Lots of <abbr>UI</abbr> design and design systems.</figcaption>
 		</figure>
+		<nav>
+			<div class="prev"><a class="next" href="2.html">&larr; <abbr>WGU</abbr></a> <code>:Use Case</code></div>
+			<div class="next"><a href="/" class="pic"><img src="img/me.png" alt="Me" /></a></div>
+		</nav>
 	</div>
 
 <script>
