--- a/4.html
+++ b/4.html
@@ -154,7 +154,11 @@
 		<figure class="screen">
 			<img src="img/ml-9.jpg" alt="Portfolio" />
 			<figcaption>Time tracking and work to do</figcaption>
-		</figure>		
+		</figure>
+		<nav>
+			<div class="prev"><a class="next" href="5.html">&larr; CircleCI</a> <code>:Use Case</code></div>
+			<div class="next"><code> Use Case:</code> <a class="next" href="1.html"><abbr>H&amp;R</abbr> Block &rarr;</a></div>
+		</nav>	
 	</div>
 
 <script>
