--- a/5.html
+++ b/5.html
@@ -131,6 +131,10 @@
 			<img src="img/cci8.png" alt="Portfolio" />
 			<figcaption>Pipelines exploration and direction</figcaption>
 		</figure>
+		<nav>
+			<div class="prev"><a href="/" class="pic"><img src="img/me.png" alt="Me" /></a></div>
+			<div class="next"><code> Use Case:</code> <a class="next" href="4.html">Mavenlink &rarr;</a></div>
+		</nav>
 	</div>
 
 <script>
