--- a/1.html
+++ b/1.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+				<h3>The problem</h3>
 			</div>
 			<div class="col">
 				<p>There were a lot of business reasons and technical reasons for this project, but as the <abbr>UX</abbr> designer I had to keep in mind the tax pro. The tax pro needed a tool that would help them confidently and accurately prepare a tax return. In the retail setting this was an essential part of the experience.</p>
@@ -104,8 +104,8 @@
 			<figcaption>Client summary</figcaption>
 		</figure>
 		<nav>
-			<div class="prev"><a class="next" href="4.html">&larr; Mavenlink</a> <code>:Use Case</code></div>
-			<div class="next"><code> Use Case:</code> <a class="next" href="2.html"><abbr>WGU</abbr> &rarr;</a></div>
+			<div class="prev"><a class="prev" href="2.html">&larr; <abbr>WGU</abbr></a> <code>:Use Case</code></div>
+			<div class="next"><code>Use Case:</code> <a class="next" href="4.html">Mavenlink &rarr;</a></div>
 		</nav>
 	</div>
 
