--- a/2.html
+++ b/2.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+				<h3>The problem</h3>
 			</div>
 			<div class="col">
 				<p>Students really had no way of studying, and making progress except at a desktop computer. <abbr>WGU</abbr> students tend to be working adults with families, and their programs are setup so students can work at their own pace. So giving them access to the curriculum, assignments, track progress, and have access to their mentors anywhere, anytime, on any device was really important to helping them make progress in their education.</p>
@@ -97,8 +97,8 @@
 			<p>By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
 		</div>
 		<nav>
-			<div class="prev"><a class="next" href="1.html">&larr; <abbr>H&amp;R</abbr> Block</a> <code>:Use Case</code></div>
-			<div class="next"><code> Use Case:</code> <a class="next" href="3.html"><abbr>TCS</abbr> &rarr;</a></div>
+			<div class="prev"><a class="prev" href="3.html">&larr; <abbr>TCS</abbr></a> <code>:Use Case</code></div>
+			<div class="next"><code> Use Case:</code> <a class="next" href="1.html"><abbr>H&amp;R</abbr> Block &rarr;</a></div>
 		</nav>
 	</div>
 
