--- a/5.html
+++ b/5.html
@@ -79,7 +79,7 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+				<h3>The problem</h3>
 			</div>
 			<div class="col">
 				<p>CircleCI&rsquo;s mission is to manage change so software teams can innovate faster. We wanted to add the ability to add more sources of change, and ultimately reimagine how engineers setup projects and think about a <abbr>CI</abbr> tool. This would help engineering teams understand those changes and ultimately help them be more productive and do their best work.</p>
