--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="col">
 				<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
 			</div>
-			<h1 class="col">I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the world being used by people to make their lives better. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
+			<h1 class="col">I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem. I love seeing my designs out in the world being used by people to make their lives better. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
 		</header>
 		<!-- <section class="process row">
 			<div class="col">
@@ -55,9 +55,13 @@
 			</div>
 			<div class="col">
 				<div class="work">
+					<h3><a href="6.html">Housecall Pro (HCP)</a></h3>
+					<p>Designing for Pros and their first experiences with HCP. Set the design language and design system library for our iOS apps.</p>
+				</div>
+				<!-- <div class="work">
 					<h3><a href="5.html">CircleCI</a></h3>
 					<p>Lead designer on three product experience teams. Helping our design team be the best they can be.</p>
-				</div>
+				</div> -->
 				<div class="work">
 					<h3><a href="4.html">Mavenlink</a></h3>
 					<p>Lead product designer on the resource management and project management areas of our product.</p>
