--- a/4.html
+++ b/4.html
@@ -70,7 +70,7 @@
 		</div>
 		<div class="row">
 			<div class="col">
-				<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+				<h3>The problem</h3>
 			</div>
 			<div class="col">
 				<p>For resource planners setting delivery teams up to succeed is critical. With things always changing we needed to give them the ability to plan ahead and maintain a healthy workforce. Deeper than that for resource planners we wanted to give them the confidence to be able contribute strategically to their organization and help those they allocate better enjoy their work and grow their careers.</p>
@@ -156,8 +156,8 @@
 			<figcaption>Time tracking and work to do</figcaption>
 		</figure>
 		<nav>
-			<div class="prev"><a class="next" href="5.html">&larr; CircleCI</a> <code>:Use Case</code></div>
-			<div class="next"><code> Use Case:</code> <a class="next" href="1.html"><abbr>H&amp;R</abbr> Block &rarr;</a></div>
+			<div class="prev"><a class="prev" href="1.html">&larr; <abbr>H&amp;R</abbr> Block</a> <code>:Use Case</code></div>
+			<div class="next"><code> Use Case:</code> <a class="next" href="6.html">Housecall Pro &rarr;</a></div>
 		</nav>	
 	</div>
 
