--- a/6.html
+++ b/6.html
@@ -28,7 +28,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Slackside+One&display=swap" rel="stylesheet">
 
-
 	<script src="js/scripts.js" type="text/javascript"></script>
 
 </head>
@@ -39,61 +38,52 @@
 			<div class="col">
 				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
 			</div>
-			<h1 class="col"><a href="https://www.tcs.com/banking-financial-services" target="_blank"><abbr>TCS</abbr><i>&nearr;</i></a></h1>
+			<h1 class="col"><a href="https://housecallpro.com" target="_blank">Housecall Pro<i>&nearr;</i></a></h1>
 		</header>
 		<div class="row">
 			<div class="col">
-				<h5>Projects</h5>
-				<h3>Too many to count</h3>
+				<h5>Project</h5>
+				<h3>Onboarding</h3>
 			</div>
 			<div class="col">
-				<p><abbr>TCS</abbr> is a giant company. According to their website, <abbr>TCS</abbr> employs 509,058 employees, which represent 155 nationalities across 46 countries. So having an impact on a product and organization that large was very difficult.</p>
-				<p>I worked in the financial services division and worked on products for banking, insurance, capital markets, corporate governance, and more.</p>
+				<p>Our goal was to improve the Pros first time experience with Housecall Pro. Our key results were activation and engagement metrics.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
 				<h5>Role</h5>
-				<h3><abbr>UI</abbr> &amp; <abbr>UX</abbr> Designer</h3>
+				<h3>Lead Designer</h3>
 			</div>
 			<div class="col">
-				<p>I would like to say I practiced <abbr>UX</abbr> design there, but in reality I was doing a lot of <abbr>UI</abbr>, interaction, and visual design.</p>
+				<ol>
+					<li>More coming&hellip;</li>
+				</ol>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col">
-				<h3>Process</h3>
+				<h3>The problem</h3>
 			</div>
 			<div class="col">
-				<p>I learned how to use design tools to speed up my work. I saw a lot of the sales process and how enterprise software is sold.</p>
-				<p>I facilitated a lot of design thinking workshops with clients and guided them through design decisions and our design process.</p>
-				<p>I worked with off-shore product teams and engineering teams and worked on projects that cost millions of dollars and spanned multiple years.</p>
-				<p>A sample of a few, of the many, different <abbr>UI</abbr>s and products I worked while at <abbr>TCS</abbr>.</p>
+				<p>In one word&hellip; churn. Housecall Pro had grown in users and features. We needed to design a way to get pros into the product and get them started with what was most important to them first and continue their journey with Housecall Pro.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col"><h3>Process</h3></div>
+			<div class="col">
+				<p>More coming&hellip;</p>
 			</div>
 		</div>
 		<figure class="screen">
-			<img src="img/tcs-7.png" alt="Portfolio" />
-			<figcaption>Mobile online banking.</figcaption>
+			<img src="img/cci0.jpg" alt="Portfolio" />
+			<figcaption>Story mapping</figcaption>
 		</figure>
-		<figure>
-			<img src="img/tcs-2.jpg" alt="Portfolio" />
-			<figcaption>Banking everywhere.</figcaption>
-		</figure>
-		<figure class="screen">
-			<img src="img/tcs-3.png" alt="Portfolio" />
-			<figcaption>Financial transactions on blockchain.</figcaption>
-		</figure>
-		<figure class="screen">
-			<img src="img/tcs-4.png" alt="Portfolio" />
-			<figcaption>Financial transactions on blockchain.</figcaption>
-		</figure>
-		<figure class="screen">
-			<img src="img/tcs-1.gif" alt="Portfolio" />
-			<figcaption>Lots of <abbr>UI</abbr> design and design systems.</figcaption>
+        <figure class="screen">
+			<img src="img/hcp1.png" alt="Portfolio" />
+			<figcaption>Product homepage</figcaption>
 		</figure>
 		<nav>
-			<div class="prev"></div>
-			<div class="next"><code>Use Case:</code> <a class="next" href="2.html"><abbr>WGU</abbr> &rarr;</a></div>
+            <div class="prev"><code> Use Case:</code> <a class="prev" href="4.html">&larr; Mavenlink</a></div>
 		</nav>
 	</div>
 
